<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_choose_position"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unirc.barbiana20.medinav.ChoosePosition">

<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#000099"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:gravity="left"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="#fff" />
    </android.support.v7.widget.Toolbar>


    <Button
        android:backgroundTint="#000099"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigate_btn"
        android:text="@string/button_navigate"
        android:textColor="#ffffff"
        android:onClick="navigate"
        tools:layout_editor_absoluteY="492dp"
        tools:layout_editor_absoluteX="148dp" />

    <TextView
        android:text="@string/choose_destination"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:id="@+id/welcome_text"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:id="@+id/spinner"
        android:entries="@array/faculty_array"
        android:prompt="@string/faculty_prompt"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

</android.support.constraint.ConstraintLayout>