<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="it.unirc.barbiana20.medinav.MainActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_unirc"
        android:scaleType="centerInside"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/imageView"
        android:cropToPadding="false"
        tools:layout_editor_absoluteY="80dp" />
    <Button
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_explore"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explore_btn"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        android:onClick="onExplore"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigate_btn"
        android:text="@string/button_navigate"
        android:textColor="#ffffff"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toRightOf="@+id/explore_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        android:onClick="onNavigate"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:text="@string/welcome_line"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:id="@+id/welcome_text"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>